[gd_scene load_steps=6 format=3 uid="uid://lspenjl0sqqx"]

[ext_resource type="Script" uid="uid://tm6hbm8ikay8" path="res://source/enemy_door.gd" id="1_ydmv2"]
[ext_resource type="PackedScene" uid="uid://c47f4bddmrxyn" path="res://scenes/enemy_detection_area_2d.tscn" id="2_ydmv2"]
[ext_resource type="Texture2D" uid="uid://bnhxi2pdygry5" path="res://assets/sprites/level/enemy_door.png" id="3_8sab6"]
[ext_resource type="PackedScene" uid="uid://xqpi82yby68t" path="res://scenes/interaction_text.tscn" id="6_ok02g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83dcw"]
size = Vector2(52, 57)

[node name="EnemyDoor" type="StaticBody2D"]
collision_layer = 9
collision_mask = 2
script = ExtResource("1_ydmv2")

[node name="EnemyDetectionArea2D" parent="." instance=ExtResource("2_ydmv2")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_8sab6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_83dcw")
debug_color = Color(0.6733987, 0.30689642, 1, 0.41960785)

[node name="InteractionText" parent="." instance=ExtResource("6_ok02g")]
visible = false
offset_top = 101.0
offset_bottom = 101.0

[connection signal="enemy_entered" from="EnemyDetectionArea2D" to="." method="_on_enemy_detection_area_2d_enemy_entered"]
[connection signal="enemy_exited" from="EnemyDetectionArea2D" to="." method="_on_enemy_detection_area_2d_enemy_exited"]
